# SeaBattle

./: CMakeLists.txt  README.md  TASK.md
src/: main.cpp  memory.hpp  random.cpp  random.hpp
src/game/: factory.cpp  factory.hpp  field.cpp  field.hpp  game.hpp  options.hpp  player.hpp  types.hpp
src/game/one_ship/: enemy_player.cpp  enemy_player.hpp  game.cpp  game.hpp  player.hpp  players.hpp  screen_player.cpp  screen_player.hpp
src/ui/: field.cpp  field.hpp  game_over.hpp  menu.cpp  menu.hpp  player.cpp  player.hpp  ui.hpp
